apps/media/jellyseerr/deployment-jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - image: fallenbagel/jellyseerr:2.7.1
          name: jellyseerr
          resources: {}
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr
      restartPolicy: Always
      volumes:
        - name: jellyseerr
          persistentVolumeClaim:
            claimName: jellyseerr
