apps/media/jellyseerr/ingress-jellyseerr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
spec:
  ingressClassName: nginx
  rules:
  - host: jellyseerr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: jellyseerr
            port:
              number: 5055
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyseerr.almothana.xyz
      secretName: almothana-xyz-tls
